--- a/coroutine/TODO
+++ b/coroutine/TODO
@@ -1,3 +1,4 @@
-优化co_mutex, 为BlockWait抽象出一个WaitObject, 管理等待中的协程, 以免不同的WaitObject竞争同一个全局锁.
+优化co_mutex, 为BlockWait抽象出一个WaitObject, 管理等待中的协程, 以免不同的WaitObject竞争同一个全局锁
+阻塞socket的超时设置(RECVTIMEO, SENDTIMEO)在协程中处理
 添加channel
 支持exception
