--- a/coroutine/TODO
+++ b/coroutine/TODO
@@ -1,4 +1,5 @@
 TODO:
+正确处理Add into epoll, add into wait_list, set timer And epoll_wait, cancel这几件事的同步关系
 支持sleep usleep nanosleep
 支持poll(NULL, 0, 1000);这种用来做sleep的用法
 添加类似channel的特性
