--- a/coroutine/TODO
+++ b/coroutine/TODO
@@ -1,4 +1,5 @@
 TODO:
+HOOK socket函数族其他可能阻塞的函数，比如close, resolve.
 添加类似channel的特性
 考虑移植Windows: 1.HOOK WINAPI, boost.asio替代epoll 2.ucontext->boost.context
 
