--- a/coroutine/TODO
+++ b/coroutine/TODO
@@ -1,5 +1,4 @@
 TODO:
-添加类似channel的特性
 尝试HOOK socket函数族其他可能阻塞的函数，比如getaddrbyname
 考虑移植Windows: 1.HOOK WINAPI, boost.asio替代epoll 2.ucontext->boost.context
 
@@ -16,3 +15,4 @@ DONE:
 支持sleep nanosleep poll(timeout)
 正确处理Add into epoll, add into wait_list, set timer And epoll_wait, cancel这几件事的同步关系
 支持select 
+支持channel特性
