--- a/coroutine/TODO
+++ b/coroutine/TODO
@@ -1,6 +1,9 @@
 TODO:
+移植Windows: 
+    1.HOOK WINAPI, boost.asio替代epoll
+        Hook List: recv send select WSARecv WSASend
+    2.ucontext->windows.fiber
 HOOK select poll时, 正确处理文件句柄
-考虑移植Windows: 1.HOOK WINAPI, boost.asio替代epoll 2.ucontext->boost.context
 
 DONE:
 支持exception
@@ -20,3 +23,4 @@ DONE:
 HOOK read write时, 不要影响读文件
 使用shared-stack方案, 降低一点点协程切换速度换取内存的节约使用, 支持创建海量协程
 网络IO以外的阻塞调用, 可以使用co_await异步化
+
