--- a/coroutine/TODO
+++ b/coroutine/TODO
@@ -1,9 +1,5 @@
 TODO:
-select中对exceptfds正确检测!
-移植Windows: 
-    1.HOOK WINAPI, boost.asio替代epoll
-        Hook List: recv send select WSARecv WSASend
-    2.ucontext->windows.fiber
+WIN HOOK: send recv WSARecv** WSASend**
 HOOK select poll时, 正确处理文件句柄
 
 DONE:
@@ -24,4 +20,9 @@ DONE:
 HOOK read write时, 不要影响读文件
 使用shared-stack方案, 降低一点点协程切换速度换取内存的节约使用, 支持创建海量协程
 网络IO以外的阻塞调用, 可以使用co_await异步化
+select中对exceptfds正确检测!
+移植Windows: 
+    1.HOOK WINAPI, 使用多select模型
+        Hook List: accept connect select WSARecv WSASend
+    2.ucontext->windows.fiber
 
