--- a/coroutine/TODO
+++ b/coroutine/TODO
@@ -1,4 +1,6 @@
 TODO:
+重新尝试boost.context\boost.coroutine
+增加编译选项：USE_BOOST_COROUTINE  DISABLE_HOOK
 增加适用于协程版的shared_ptr.(使用shared_ptr指向的对象时, 协程切换, 其他协程可能删除此对象)
 Work Stealing...
 HOOK select poll时, 正确处理文件句柄
